# Eurelis-LlmaToolkit

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  Eurelis_LLMATK.postman_collection.json  LICENSE  Makefile  README.md  SECURITY.md  pyproject.toml  sonar-project.properties
.githooks/: pre-commit
.github/: CODEOWNERS
.github/workflows/: sonar-scan.yml
etc/config_samples/: acronyms.json  basic_config.json  basic_config_with_chat_engine.json  basic_config_with_retriever.json  basic_config_with_search_engine.json  llmatk_config.json
etc/config_tests/tests/unit_tests/llamaindex/: test_eurelis1.json  test_eurelis2.json
etc/notebooks/: chat_engine_with_filters.ipynb
src/: chat_engine_with_custom_prompt.ipynb  chat_engine_with_filters.ipynb  requirements.txt
src/eurelis_llmatoolkit/: __init__.py  types.py
src/eurelis_llmatoolkit/api/: __init__.py
src/eurelis_llmatoolkit/api/fastapi/: demo_app.py
src/eurelis_llmatoolkit/api/fastapi/chatbot/: chatbot_endpoints.py
src/eurelis_llmatoolkit/api/fastapi/command/: command_endpoints.py
src/eurelis_llmatoolkit/api/fastapi/search/: search_endpoints.py
src/eurelis_llmatoolkit/api/fastapi/similarity/: similarity_endpoints.py
src/eurelis_llmatoolkit/api/fastapi/version/: version_endpoints.py
src/eurelis_llmatoolkit/api/misc/: base_config.py  console_manager.py  version_info.py
src/eurelis_llmatoolkit/api/model/: api_model.py
src/eurelis_llmatoolkit/api/model/dao/: __init__.py  mongodb_dao_impl.py
src/eurelis_llmatoolkit/api/routers/chatbot/: chatbot_endpoints.py
src/eurelis_llmatoolkit/api/routers/command/: command_endpoints.py
src/eurelis_llmatoolkit/api/routers/security/: security.py
src/eurelis_llmatoolkit/api/service/: agent_manager.py  chatbot_service.py  command_service.py  rag.py  response_handler.py  richcontent_manager.py  search_service.py  session_manager.py  similarity_service.py  version_service.py  worker_manager.py
src/eurelis_llmatoolkit/api/worker/: default_worker.py
src/eurelis_llmatoolkit/api/wrapper/: llmatk_wrapper.py
src/eurelis_llmatoolkit/langchain/: __init__.py  console.py  gradiochat.py  langchain_wrapper.py
src/eurelis_llmatoolkit/langchain/acronyms/: __init__.py  acronyms_chain_wrapper.py  acronyms_document_transformer.py  acronyms_text_transformer.py
src/eurelis_llmatoolkit/langchain/addons/checker/: __init__.py  chat_checker.py  check_input.py  check_input_callback.py
src/eurelis_llmatoolkit/langchain/addons/output/: markdown_html_callback.py
src/eurelis_llmatoolkit/langchain/chains/: __init__.py
src/eurelis_llmatoolkit/langchain/chains/conversational_retrieval/: __init__.py
src/eurelis_llmatoolkit/langchain/dataset/: __init__.py  dataset.py
src/eurelis_llmatoolkit/langchain/document_loaders/: __init__.py
src/eurelis_llmatoolkit/langchain/document_loaders/fs/: __init__.py
src/eurelis_llmatoolkit/langchain/document_loaders/list/: __init__.py  list_loader.py
src/eurelis_llmatoolkit/langchain/document_loaders/sitemap/: __init__.py
src/eurelis_llmatoolkit/langchain/document_loaders/url/: __init__.py
src/eurelis_llmatoolkit/langchain/document_transformers/html2text/: __init__.py
src/eurelis_llmatoolkit/langchain/document_transformers/urloutput/: __init__.py
src/eurelis_llmatoolkit/langchain/embeddings/: __init__.py
src/eurelis_llmatoolkit/langchain/embeddings/huggingface/: __init__.py
src/eurelis_llmatoolkit/langchain/embeddings/openai/: __init__.py
src/eurelis_llmatoolkit/langchain/llms/: __init__.py
src/eurelis_llmatoolkit/langchain/memory/: __init__.py  conversation_buffer_memory.py
src/eurelis_llmatoolkit/langchain/parsers/: __init__.py  pdf.py
src/eurelis_llmatoolkit/langchain/retrievers/: __init__.py
src/eurelis_llmatoolkit/langchain/text_splitters/: __init__.py
src/eurelis_llmatoolkit/langchain/vectorstores/: __init__.py
src/eurelis_llmatoolkit/llamaindex/: README.md  abstract_wrapper.py  chatbot_wrapper.py  config.json  config.py  config_loader.py  console.py  indexation_wrapper.py  ingestion_wrapper.py  logger.py  main.py  react_wrapper.py  search_wrapper.py  sentry.py  types.py
src/eurelis_llmatoolkit/llamaindex/callbacks/: error_logging.py
src/eurelis_llmatoolkit/llamaindex/chat_manager/: json_conversation_manager.py
src/eurelis_llmatoolkit/llamaindex/chat_memory_persistence/: abstract_memory_persistence_handler.py  json_persistence_handler.py
src/eurelis_llmatoolkit/llamaindex/dataset/: __init__.py  dataset.py
src/eurelis_llmatoolkit/llamaindex/factories/: __init__.py  cache_factory.py  callback_factory.py  chat_engine_factory.py  conversation_manager_factory.py  documentstore_factory.py  embedding_factory.py  llm_factory.py  memory_factory.py  memory_persistence_factory.py  node_postprocessor_factory.py  poc_reader_factory.py  reader_factory.py  retriever_factory.py  transformation_factory.py  vectorstore_factory.py
src/eurelis_llmatoolkit/llamaindex/readers/: __init__.py  abstract_fs_reader.py  abstract_reader_adapter.py  advanced_sitemap_reader.py  advanced_sitemap_reader_adapter.py  community_simple_webpage_reader.py  community_sitemap_reader.py  pdf_file_reader.py  reader_adapter.py  simple_webpage_reader_adapter.py  sitemap_reader_adapter.py  txt_file_reader.py
src/eurelis_llmatoolkit/llamaindex/retrievers/: qanda_retriever.py
src/eurelis_llmatoolkit/llamaindex/transformers/: json_file_acronym_transformer.py  llm_node_transformer.py  metadata_transformer.py  node_llm_transformer.py
src/eurelis_llmatoolkit/llamaindex/utils/: base_factory.py  class_loader.py
src/eurelis_llmatoolkit/llamaindex/vector_stores/: custom_mongodb_atlas_vector_store.py
src/eurelis_llmatoolkit/utils/: base_factory.py  class_loader.py
src/eurelis_llmatoolkit/utils/output/: __init__.py  base_console_output.py  logging_console_output.py  verbose_console_output.py
src/tests/samples/: bostik_sitemap_reader.py
src/tests/unit_tests/llamaindex/: conftest.py  test_filters.py  test_indexation_wrapper.py  test_ingestion_wrapper.py  test_run_and_memory.py
(+21 files in other folders)
