[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
exclude = [
  "Makefile",
  "sonar-project.properties",
  "*.ipynb",
  "etc/",
]

[project]
name = "eurelis-llmatoolkit"
version = "2.0.0dev15"
authors = [
  { name="Vincent LAMBERT", email="v.lambert@eurelis.com" },
  { name="Jérôme DIAZ", email="j.diaz@eurelis.com" },
  { name="Nicolas LOISY", email="n.loisy@eurelis.com " }
]
description = "Framework to build and manage IA based applications. Based on Langchain and LlamaIndex under the hood."
readme = "README.md"
requires-python = ">=3.11.3"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "python-dotenv==1.0.0",
    "click==8.1.7"
]

[project.urls]
"Homepage" = "https://github.com/Eurelis/Eurelis-LlmaToolkit"
"Bug Tracker" = "https://github.com/Eurelis/Eurelis-LlmaToolkit/issues"

[project.scripts]
llmatoolkit = "eurelis_llmatoolkit.llamaindex.console:main_cli"

[project.optional-dependencies]
llamaindex = [
    "llama-index==0.12.41",
    "llama-index-readers-web>=0.3.8",
]
huggingface = [
    "llama-index-embeddings-huggingface>=0.5.2",
    "sentence-transformers>=3.4.1",
]
openai = [
    "llama-index-llms-openai>=0.4.7",
]
anthropic = [
    "anthropic>=0.49.0",
    "llama-index-llms-anthropic>=0.6.10",
]
mongodb = [
    "llama-index-storage-docstore-mongodb>=0.3.0",
    "llama-index-vector-stores-mongodb>=0.5.0",
    "motor>=3.7.0",
    "pymongo<4.10",
]
chroma = [
    "chromadb>=0.6.3",
    "llama-index-vector-stores-chroma>=0.4.1",
]
sitemap = [
    "beautifulsoup4>=4.13.3",
    "lxml>=5.3.1",
]
pdf = [
    "pymupdf>=1.25.4",
    "pymupdf4llm>=0.0.17",
]
markdown = [
    "markdown>=3.7",
]
sentry = [
    "sentry-sdk>=2.23.1",
]

[dependency-groups]
dev = [
    "black>=24.10.0",
    "mypy>=1.14.0",
    "pip-audit>=2.7.3",
    "pre-commit>=4.0.1",
    "pylint>=3.3.3",
    "ruff>=0.8.4",
]
test = [
    "pytest>=8.3.4",
]
